--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@awesome-cordova-plugins/sqlite": "^5.41.0",
     "@capacitor/core": "3.4.3",
     "@ionic-native/in-app-browser": "^5.36.0",
+    "@ionic-native/pdf-generator": "^5.36.0",
     "@ionic/angular": "^6.0.0",
     "@ionic/cordova-builders": "^6.1.0",
     "@ionic/storage": "^3.0.6",
@@ -49,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "cordova-android": "^9.1.0",
+    "cordova-pdf-generator": "^2.1.1",
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
@@ -83,7 +85,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "im.ltdev.cordova.UserAgent": {},
       "cordova-plugin-inappbrowser": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-pdf-generator": {}
     },
     "platforms": [
       "android"
