--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@awesome-cordova-plugins/email-composer": "^5.41.0",
     "@awesome-cordova-plugins/sqlite": "^5.41.0",
     "@capacitor/core": "3.4.3",
+    "@ionic-native/email-composer": "^5.36.0",
+    "@ionic-native/file": "^5.36.0",
+    "@ionic-native/file-opener": "^5.36.0",
     "@ionic-native/in-app-browser": "^5.36.0",
     "@ionic-native/pdf-generator": "^5.36.0",
     "@ionic/angular": "^6.0.0",
@@ -28,6 +32,7 @@
     "@ionic/storage": "^3.0.6",
     "@ionic/storage-angular": "^3.0.6",
     "cordova": "^11.0.0",
+    "pdfmake": "^0.2.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -47,11 +52,15 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@types/pdfmake": "^0.1.21",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "cordova-android": "^9.1.0",
     "cordova-pdf-generator": "^2.1.1",
     "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-email-composer": "^0.10.0",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-opener2": "^3.0.5",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^5.0.0",
@@ -86,7 +95,12 @@
       "im.ltdev.cordova.UserAgent": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-sqlite-storage": {},
-      "cordova-pdf-generator": {}
+      "cordova-pdf-generator": {},
+      "cordova-plugin-file-opener2": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-file": {},
+      "cordova-plugin-email-composer": {}
     },
     "platforms": [
       "android"
